# ISAAC1

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/lightsail/: cloud-init.sh  deploy-local.ps1
docs/: AWS_LIGHTSAIL_SETUP.md  DEVELOPMENT.md  GITHUB_SETUP.md  ISAAC1_SETUP_AND_FUNCTIONALITY.md  PROJECT_BRIEF.md  ROADMAP.md  RUT241_FIRST_STEP.md
src/isaac1/: __init__.py  __main__.py  control_server.py  rut241.py
tests/: test_control_server.py  test_import.py  test_rut241.py  test_smoke.py
