[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac1"
version = "0.1.0"
description = "A new, separate ISAAC1 Python project."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
isaac1 = "isaac1.rut241:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
